2007-12-23  Neil Williams  <linux@codehelp.co.uk>

	* qof/qofquery.c: (qof_query_init): Ensure that
	qof_date_init is called even if only queries are
	initialised. Fix for Gnotime.
	* configure.in : Allow gdabackend but not as a default.
	* qof.pc.in : New pkgconfig file for libqof2.
	* backend/Makefile.am,
	backend/gda/Makefile.am,
	backend/gda/qof-gda.c,
	backend/gda/qof-gda.h : Begin the transition to
	libgda3-3.

2007-12-15  Neil Williams  <linux@codehelp.co.uk>

	* configure.in : Remove need for perl. Add the
	--disable-gdasql configure option and tie it into
	--enable-embedded.
	* lib/libsql/Makefile.am : Ensure libqofsql is linked
	against libglib2.0-0
	* qof/Makefile.am,
	qof/test/Makefile.am : Rationalise the SQL_PKG_LIB 
	support in libqof1 and the test suite.
	* website/hacking.html : Update hacking advice for
	0.7.3 changes.

2007-12-13  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: (qsql_load_kvp): Create the
	new sqlite_kvp table if not already present.

2007-12-10  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Build library before backends.
	* TODO: Notes on linking issues.
	* backend/file/Makefile.am: Link the built qof library
	* backend/sqlite/Makefile.am: Link the built qof library
	  and the built qofsql library.
	* backend/sqlite/qof-sqlite.c: Note presence of a bug
	  (unfixed). Sqlite-kvp table is not being created.
	* configure.in: Migrate to libgda3-3.
	* qof-1.pc.in: Remove Requires.private as libxml2 is
	  no longer needed, even for static. The XML backend
	  is a GModule.
	* qof/Makefile.am: Prune the linkages and use libgdasql-3.0
	  instead of the entire libgda3-3.
	* qof/qofsql.c: New header location for libgda3-3.
	* qof/test/Makefile.am: Prune linkages.

2007-11-15  Neil Williams  <linux@codehelp.co.uk>

	* HACKING,
	configure.in,
	Makefile.am,
	autogen.sh : Remove intltool and glib-gettextize
	in favour of plain gettext.

2007-11-15  gettextize  <bug-gnu-gettext@gnu.org>
